--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
+
 }
+
+@media (max-width: 480px) {
+  .posts {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  
+  }
+}
+
