--- a/src/PostForm.css
+++ b/src/PostForm.css
@@ -1,5 +1,5 @@
-form{
-  background-color:#f5f5f5;
+form {
+  background-color: #f5f5f5;
   border: 1px solid black;
   padding: 10px;
   box-shadow: 5px 10px;
@@ -7,22 +7,54 @@ form{
   flex-direction: column;
   gap: 10px;
   padding: 20px 40px;
+  margin: 20px; 
+
 
 }
 
+h2 {
+  font-size: 26px;
+}
 
-.happy-button{
+textarea {
+  font-size: 18px;
+}
+
+.happy-button {
   border-radius: 50px;
-  background-color: rgb(236, 136, 155);
+  background-color: pink;
   border: none;
   margin-right: auto;
-  padding: 15px;
-  
-  }
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
 
-
-
-.text{
+.text {
   display: flex;
   justify-content: space-between;
 }
+
+
+
+@media only screen and (max-width: 480px) {
+  form {
+    padding: 10px;
+      margin-left: 0;
+    margin-right: 0;
+   }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  textarea {
+    font-size: 16px;
+  }
+
+  .happy-button {
+    padding: 8px;
+    font-size: 16px;
+  }
+}
+
