--- a/src/PostList.css
+++ b/src/PostList.css
@@ -1,41 +1,84 @@
 .list {
-  background-color: #f3f3ef;
-  border: 1px solid black;
-  margin-top: 30px;
-  padding: 10px;
-  box-shadow: 5px 10px;
-  padding-left: 
-  30px;
+	background-color: #f3f3ef;
+	border: 1px solid black;
+	margin-top: 30px;
+	padding: 10px;
+	box-shadow: 5px 10px;
+	padding-left: 30px;
+	margin: 20px;
 }
 
-.like-button {
-  background-color: #dedada;
-  border-radius: 50%;
-  padding: 20px;
-  border: none;
 
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-	transform: scale(1);
-	animation: pulse 3s infinite;
+.info {
+	display: flex;
+	justify-content: space-between;
+
+}
+
+.heart {
+	margin-right: 550px;
+
+}
+
+
+.like-button {
+	background-color: #dedada;
+	border-radius: 50%;
+	padding: 10px;
+	border: none;
+	animation: pulse 2s infinite;
+	cursor: pointer;
+	font-size: 25px;
+}
+
+.like-button:hover {
+	background-color: pink;
 }
 
 @keyframes pulse {
 	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(70, 70, 70, 0.7);
+		transform: scale(1)
 	}
 
- 	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-	} 
+	50% {
+		transform: scale(1.1)
+	}
 
- 	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-	} 
+	to {
+		transform: scale(1)
+	}
 }
 
 .like-button.liked {
-  background-color: pink; 
+	background-color: pink;
+
 }
+
+
+@media only screen and (max-width: 480px) {
+	.list {
+		padding: 5px;
+		margin-top: 15px;
+	}
+
+	.info {
+		flex-wrap: wrap;
+	}
+
+	.heart {
+		margin-right: 10px;
+	}
+
+	.like-button {
+		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 800px) {
+  .list {
+    padding: 5px;
+    margin-top: 15px;
+    justify-content: center;
+  }}
+
+	
