--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,22 @@
 
 }
 
+
 @media (max-width: 480px) {
   .posts {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+    margin: auto;
   
   }
 }
 
+@media only screen and (max-width: 800px) and (min-width: 500px) {
+  .posts {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: auto;
+  }
+}
