--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,5 @@
-.header{
+.header {
+  text-align: center;
   font-size: 1.5rem;
   background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
   -webkit-background-clip: text;
@@ -6,8 +7,3 @@
 
 }
 
-@media (max-width: 480px) {
-  .header {
-    font-size: 1rem;
-  }
-}
