--- a/src/styles/PostForm.css
+++ b/src/styles/PostForm.css
@@ -40,8 +40,8 @@ textarea {
 @media only screen and (max-width: 480px) {
   form {
     padding: 10px;
-      margin-left: 0;
-    margin-right: 0;
+      margin: 0 auto;
+    
    }
 
   h2 {
@@ -57,4 +57,6 @@ textarea {
     font-size: 16px;
   }
 }
+
+
 
